force-app/main/default/objects/BREG_Batch_Job_Configuration__mdt/BREG_Batch_Job_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Defines configuration and execution settings for batch jobs.</description>
    <label>BREG Batch Job Configuration</label>
    <pluralLabel>BREG Batch Job Configurations</pluralLabel>
</CustomObject>