force-app/main/default/objects/BREG_Batch_Job_Configuration__mdt/fields/Cleanup_Job_Class__c.field-meta.xml
<CustomField>
    <fullName>Cleanup_Job_Class__c</fullName>
    <label>Cleanup Job Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>