force-app/main/default/objects/BREG_Batch_Job_Configuration__mdt/fields/Job_Class__c.field-meta.xml
<CustomField>
    <fullName>Job_Class__c</fullName>
    <description>Name of the Apex Batch class</description>
    <label>Job Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>