force-app/main/default/objects/BREG_Batch_Job_Configuration__mdt/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>Functional description of what the batch job does.</description>
    <label>Job Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>