force-app/main/default/objects/BREG_Batch_Job_Configuration__mdt/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <description>Logical name of the batch job used for identification and display.</description>
    <label>Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>