force-app/main/default/objects/BREG_Batch_Job_Configuration__mdt/fields/Post_Processing_Report__c.field-meta.xml
<CustomField>
    <fullName>Post_Processing_Report__c</fullName>
    <description>Report that shows records after the batch job has completed processing.</description>
    <label>Post-Processing Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>