force-app/main/default/objects/BREG_Batch_Job_Configuration__mdt/fields/Pre_Processing_Report__c.field-meta.xml
<CustomField>
    <fullName>Pre_Processing_Report__c</fullName>
    <description>Report that identifies the records eligible for processing before the batch job runs.</description>
    <label>Pre-Processing Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>