force-app/main/default/objects/BREG_Batch_Job_Configuration__mdt/fields/Result_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>Result_Folder_URL__c</fullName>
    <label>Result Folder URL</label>
    <type>Url</type>
</CustomField>