force-app/main/default/objects/BREG_Batch_Job_Configuration__mdt/fields/Supports_Preview_Mode__c.field-meta.xml
<CustomField>
    <fullName>Supports_Preview_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the batch job supports running in preview mode</description>
    <label>Supports Preview Mode</label>
    <type>Checkbox</type>
</CustomField>