force-app/main/default/objects/BREG_Batch_Job_Configuration__mdt/fields/Supports_Quarter_Select__c.field-meta.xml
<CustomField>
    <fullName>Supports_Quarter_Select__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supports Quarter Select</label>
    <type>Checkbox</type>
</CustomField>